--- a/foundations/03-grouping-selectors/index.html
+++ b/foundations/03-grouping-selectors/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <button class="size-and-font btn1">Click Me!</button>
-    <button class="size-and-font btn2">No, Click Me!</button>
+    <button class="btn1">Click Me!</button>
+    <button class="btn2">No, Click Me!</button>
   </body>
 </html>
